syntax = "proto3";

package apiserver;

import "apiserver/request.proto";
import "apiserver/updateworkload.proto";

service Connection {
  rpc Send (ToServer) returns (FromServer);
}

message FromServer {
  string response = 1;
}

message ToServer {
  oneof ToServerContent {
    request.Request request = 1;
    updateworkload.UpdateWorkload updateWorkload = 2;
  }
}
